--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.6",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
+    "react-medium-image-zoom": "^5.2.14",
     "react-phone-input-2": "^2.15.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
